tests/ui/target_modifiers/two_flags.unknown_allowed.stderr
error: unknown target modifier `unknown_flag`, requested by `-Cunsafe-allow-abi-mismatch=unknown_flag`
  --> $DIR/two_flags.rs:10:1
   |
LL | #![crate_type = "lib"]
   | ^

error: aborting due to 1 previous error

